<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/item_background"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/brand"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:text="@string/test"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/up_down_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/yellow"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/opening"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/current"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand">

            <TextView
                android:id="@+id/opening_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:textColor="@color/purple_700"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/opening_price_value"
                android:layout_centerHorizontal="true"
                android:text="@string/opening_price"
                android:textColor="@color/teal_700"
                tools:ignore="SmallSp"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/low"
            app:layout_constraintStart_toEndOf="@+id/opening"
            app:layout_constraintTop_toBottomOf="@+id/brand">

            <TextView
                android:id="@+id/current_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:textColor="@color/purple_700"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_price_value"
                android:layout_centerHorizontal="true"
                android:text="@string/current_price"
                android:textColor="@color/teal_700"
                tools:ignore="SmallSp"
                android:textSize="10sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/high"
            app:layout_constraintStart_toEndOf="@id/current"
            app:layout_constraintTop_toBottomOf="@+id/brand">

            <TextView
                android:id="@+id/low_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:textColor="@color/purple_700"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/low_price_value"
                android:layout_centerHorizontal="true"
                android:text="@string/low_price"
                android:textColor="@color/teal_700"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/low"
            app:layout_constraintTop_toBottomOf="@+id/brand">

            <TextView
                android:id="@+id/high_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:textColor="@color/purple_700"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/high_price_value"
                android:layout_centerHorizontal="true"
                android:text="@string/high_price"
                android:textColor="@color/teal_700"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
